--- a/src/variables.css
+++ b/src/variables.css
@@ -6,7 +6,7 @@ body {
 	--inline-title-size: 2.25rem;
 	--inline-title-weight: 400;
 	--inline-title-line-height: 1.2;
-	--header-height: 44px;
+	--header-height: 60px;
 	--divider-width: 1px;
     --auger-light-background-primary: #fbfbfa;
     --auger-light-text-normal: #3a3633;
