--- a/theme.css
+++ b/theme.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v4.1.16 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.1.17 | MIT License | https://tailwindcss.com */
 @layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
@@ -200,7 +200,7 @@ body {
   --inline-title-size: 2.25rem;
   --inline-title-weight: 400;
   --inline-title-line-height: 1.2;
-  --header-height: 44px;
+  --header-height: 60px;
   --divider-width: 1px;
   --auger-light-background-primary: #fbfbfa;
   --auger-light-text-normal: #3a3633;
@@ -503,8 +503,9 @@ body:not(.font-variant-off) .workspace-leaf-content .view-content {
     --tw-shadow: 0 0 #0000;
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     display: flex;
-    height: auto;
     align-items: center;
+    padding-top: 2px;
+    padding-bottom: 8px;
     min-height: var(--header-height);
   }
   .workspace-tabs .workspace-tab-header {
@@ -514,10 +515,9 @@ body:not(.font-variant-off) .workspace-leaf-content .view-content {
     --tw-shadow: 0 0 #0000;
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     margin-inline: calc(var(--spacing) * 0.5);
-    margin-block: calc(var(--spacing) * 1.75);
-    height: auto;
     border-radius: 7px;
-    padding: calc(var(--spacing) * 0);
+    margin-top: 0;
+    margin-bottom: 0;
     color: var(--text-muted);
     background-image: none !important;
   }
@@ -540,11 +540,12 @@ body:not(.font-variant-off) .workspace-leaf-content .view-content {
     --tw-border-style: none;
     border-style: none;
     background-color: transparent;
-    padding-block: 8px;
     padding-right: calc(var(--spacing) * 1.5);
     padding-left: calc(var(--spacing) * 3);
+    padding-top: 8px;
+    padding-bottom: 8px;
   }
-  .workspace-tabs .workspace-tab-header::before,	.workspace-tabs .workspace-tab-header::after,	.workspace-tabs .workspace-tab-header-inner::before,	.workspace-tabs .workspace-tab-header-inner::after {
+  .workspace-tabs .workspace-tab-header::before, .workspace-tabs .workspace-tab-header::after, .workspace-tabs .workspace-tab-header-inner::before, .workspace-tabs .workspace-tab-header-inner::after {
     display: none !important;
   }
   .workspace-tabs .workspace-tab-header-container .titlebar-button-container.mod-right {
@@ -568,16 +569,19 @@ body:not(.font-variant-off) .workspace-leaf-content .view-content {
 }
 .mod-sidedock {
   .workspace-tabs .workspace-tab-header-container {
-    margin-block: calc(var(--spacing) * 0);
     display: flex;
-    height: auto;
     align-items: center;
     --tw-border-style: none;
     border-style: none;
-    padding-block: calc(var(--spacing) * 1.25);
     --tw-shadow: 0 0 #0000;
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     min-height: var(--header-height);
+    padding-top: 7px;
+    padding-bottom: 7px;
+    margin: 0;
+  }
+  .workspace-tabs .workspace-tab-header {
+    margin: 0;
   }
   .workspace-tab-header-inner {
     padding: 8px;
@@ -590,13 +594,16 @@ body:not(.font-variant-off) .workspace-leaf-content .view-content {
   background-color: var(--background-secondary);
 }
 .workspace-ribbon .side-dock-actions {
-  margin-top: calc(var(--header-height) + 24px);
+  margin-top: calc(var(--header-height) + 14px);
 }
 .workspace-ribbon.mod-left:before {
   --tw-border-style: none;
   border-style: none;
   background-color: var(--background-secondary-alt);
-  min-height: calc(var(--header-height) + 17px);
+  min-height: var(--header-height);
+}
+body:not(.is-focused) .workspace-ribbon.mod-left:before {
+  background-color: var(--background-secondary);
 }
 blockquote {
   border-left: 4px solid var(--text-accent);
